# prs-dataviz

./: .gitignore  ARCHITECTURE_IMPROVEMENTS.md  AUTOMATIC_POSITIONING.md  CLAUDE.md  DATA_RANGE_FIX.md  DELIVERY_SUMMARY.md  FINAL_DELIVERY.md  GITHUB_SETUP.md  HANDOFF_DOCUMENT.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SIGNIFICANCE_ANNOTATION_REDESIGN.md  SIGNIFICANCE_INDICATOR_IMPROVEMENTS.md  UV_AND_GALLERY_UPDATES.md  VISUAL_VALIDATION_SUMMARY.md  example.py  pyproject.toml
.contextune/: observability.db
docs/: index.html
examples/: legend_example.py  smart_legend_example.py
logs/00529d73-01e8-4e21-bd12-db27cc0dea1b/: chat.json  notification.json  post_tool_use.json  pre_tool_use.json  stop.json  subagent_stop.json
logs/148610e5-bf11-4673-bcea-433d451d548b/: chat.json  stop.json  subagent_stop.json
logs/2a029a9e-08c8-4c99-941c-9b64760a992a/: chat.json  stop.json  subagent_stop.json
logs/6f3b273b-9853-49de-8166-91b957bfe703/: chat.json  stop.json  subagent_stop.json
logs/7ae8797f-cd83-4394-9256-8f7c36889ec6/: chat.json  stop.json  subagent_stop.json
logs/84c35eaa-b5ae-4f1c-9b52-66afcf1c6b50/: chat.json  stop.json  subagent_stop.json
logs/b1b8535f-5b65-4aec-be1e-c45db2351585/: chat.json  stop.json  subagent_stop.json
logs/b8208efa-dc47-4036-9db3-c5435dcf3588/: chat.json  stop.json  (+1 more)
notebooks/: prs_gallery.py
tests/: calculate_bracket_spacing.py  debug_bracket_positions.py  debug_brackets.py  quick_regenerate.py  regenerate_all.sh  regenerate_all_spacing_tests.py  regenerate_auto_tests.py  regenerate_fixed_tests.py  test_automatic_positioning.py  test_comprehensive_plots.py  test_data_range_fix.py  test_helper_functions.py  test_import.py  test_improved_significance.py
(+18 files in other folders)
